# vit-servicing-station

./: Cargo.toml  Earthfile  README.md  entrypoint.sh  index.html
.config/: nextest.toml
.github/workflows/: api.yml  release.yml  test.yml
doc/api/: v0.yaml
resources/migrations/2020-05-22-112032_setup_db/: up.sql
resources/migrations/2020-05-22-142032_fund7_fix/: up.sql
resources/migrations/2020-05-22-172032_schema_full_proposal_view/: up.sql
resources/snapshot/: snapshot.json
snapshot-service/: Cargo.toml
snapshot-service/src/: handlers.rs  lib.rs  routes.rs
src/: lib.rs  main.rs
src/testing/: mod.rs  rest_client.rs  server.rs
src/testing/startup/: db.rs  server.rs
src/v0/: api_token.rs
tests/: bootstrap.rs
vit-servicing-station-cli/: Cargo.toml  local.db
vit-servicing-station-cli/src/: init_db.rs  main.rs
vit-servicing-station-cli/src/csv/: loaders.rs  models.rs
vit-servicing-station-cli/src/ideascale/: fetch.rs  mod.rs  models.rs
vit-servicing-station-lib/: Cargo.toml
vit-servicing-station-lib/migrations/2020-05-22-112032_setup_db/: down.sql  up.sql
vit-servicing-station-lib/migrations/2021-08-20_fund6/: down.sql  up.sql
vit-servicing-station-lib/migrations/2021-11-19_fund7/: down.sql  up.sql
vit-servicing-station-lib/migrations/2022-03-03_fund8/: down.sql  up.sql
vit-servicing-station-lib/migrations/2022-06-07_fund9/: down.sql  up.sql
vit-servicing-station-lib/src/v0/: mod.rs
vit-servicing-station-server/: Cargo.toml  entrypoint.sh
vit-servicing-station-server/src/: main.rs
vit-servicing-station-tests/: Cargo.toml
(+76 files in other folders)
