[package]
name = "vit-servicing-station-cli"
version = "0.3.1"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chain-impl-mockchain = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master" }
chrono = "0.4.13"
csv = "1.1"
diesel = "1.4"
futures = "0.3"
jormungandr-lib = { git = "https://github.com/input-output-hk/jormungandr.git", branch = "master" }
lazy_static = "1.4"
rand = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.1.0"
tokio = { version = "1.7.1", features = ["rt", "macros"] }
url = "2.2"
vit-servicing-station-lib = { path = "../vit-servicing-station-lib" }

[dev-dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
